<resources>
    <string name="app_name">Travel Docket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_content_des">this is image content descriptions</string>
    <string name="name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="phone_text">Phone</string>
    <string name="password_text">Password</string>
    <string name="update_image">Update Image</string>
    <string name="update_button">Update</string>
    <string name="choose_image">Choose Image</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="submit_button">Submit</string>
    <string name="sign_in">Sign In</string>
    <string name="des_text">Description</string>
    <string name="review_text">Review</string>
    <string name="addcomment_text">Add Comment</string>
    <string name="have_an_account">Have an account?</string>
    <string name="haven_not_account">Do not have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="or">or</string>
    <string name="anonymouse">Anonymous</string>
    <string name="wantuse">Want to use it as</string>
    <string name="upload_image">Upload Image</string>
    <string name="pleasewait">Please wait..\nDiscovering your location</string>
    <string name="Rate_this">Rate this place</string>
    <string name="comment">Comment</string>
    <string name="ok">OK</string>
    <string name="rating">Rating</string>
    <string name="cancel">Cancel</string>
</resources>