<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">
    <ImageView
        android:contentDescription="@string/image_content_des"
        android:layout_width="match_parent"
        android:layout_height="@dimen/density_250"
        android:src="@drawable/logo"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/density_10"
        android:layout_marginLeft="@dimen/density_20"
        android:layout_marginRight="@dimen/density_20"
        android:layout_gravity="center"
        app:cardElevation="@dimen/density_5"
        android:layout_marginTop="@dimen/density_50"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/density_20"
                android:layout_marginBottom="@dimen/density_5"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signInId"
                    android:layout_width="@dimen/density_60"
                    android:layout_height="@dimen/density_30"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/teal_200"
                    android:background="@null"
                    android:textStyle="italic"
                    android:layout_marginStart="@dimen/density_5"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/density_20"
                android:layout_marginBottom="@dimen/density_5"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/haven_not_account"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signupId"
                    android:layout_width="@dimen/density_60"
                    android:layout_height="@dimen/density_30"
                    android:text="@string/signUp"
                    android:textAllCaps="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/teal_200"
                    android:background="@null"
                    android:textStyle="italic"
                    android:layout_marginStart="5dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textAlignment="center"
               android:layout_gravity="center"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/density_10"
                android:layout_marginBottom="@dimen/density_20"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wantuse"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/density_90"
                    android:layout_height="@dimen/density_30"
                    android:text="@string/anonymouse"
                    android:textAllCaps="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/teal_200"
                    android:background="@null"
                    android:textStyle="italic"
                    android:id="@+id/anonomousId"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>
</layout>