<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="user"
            type="com.example.touristpark.repository.model.User" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpFragment">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/density_10"
           android:layout_marginRight="@dimen/density_10"
           android:layout_marginBottom="@dimen/density_10"
           android:layout_marginTop="@dimen/density_10"
           app:cardCornerRadius="@dimen/density_8"
           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               >
               <ImageView
                   android:contentDescription="@string/image_content_des"
                   android:layout_marginTop="@dimen/density_10"
                   android:layout_width="@dimen/density_200"
                   android:layout_height="@dimen/density_130"
                   android:layout_gravity="center"
                  android:scaleType="fitCenter"
                   android:id="@+id/profilepicId"
                   android:src="@drawable/profile"
                   android:adjustViewBounds="true"
                   />
               <androidx.appcompat.widget.AppCompatButton
                   android:layout_width="@dimen/density_110"
                   android:layout_height="@dimen/density_30"
                   android:text="@string/choose_image"
                   android:textAllCaps="false"
                   android:layout_gravity="center"
                   android:layout_marginTop="@dimen/density_10"
                   android:background="@color/mainColor"
                   android:textColor="@color/white"
                   android:id="@+id/chooseImageId"
                   />
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/name_text"
                   android:padding="@dimen/density_15"
                   android:layout_margin="@dimen/density_10"
                   android:textColor="@color/black"
                   android:inputType="text"
                   android:id="@+id/nameId"
                   android:text="@={user.name}"
                   />
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/email_text"
                   android:padding="@dimen/density_15"
                   android:layout_margin="@dimen/density_10"
                   android:textColor="@color/black"
                   android:singleLine="false"
                   android:id="@+id/emailId"
                   android:text="@={user.email}"
                   />
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/phone_text"
                   android:padding="15dp"
                   android:layout_margin="@dimen/density_10"
                   android:textColor="@color/black"
                   android:id="@+id/phoneId"
                   android:text="@={user.phone}"
                   android:inputType="phone"
                   />
               <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/password_text"
                   android:inputType="textPassword"
                   android:padding="@dimen/density_15"
                   android:layout_margin="@dimen/density_10"
                   android:textColor="@color/black"
                   android:id="@+id/passwordId"
                   android:text="@={user.password}"
                   />
               <EditText
                   android:inputType="textPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/confirm_pass"
                   android:padding="15dp"
                   android:layout_margin="@dimen/density_10"
                   android:textColor="@color/black"
                   android:id="@+id/confirmpasswordId"
                   />
               <androidx.appcompat.widget.AppCompatButton
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/density_40"
                   android:text="@string/submit_button"
                   android:textAlignment="center"
                   android:textAllCaps="false"
                   android:textColor="@color/white"
                   android:background="@drawable/round_shape"
                   android:layout_marginTop="@dimen/density_20"
                   android:layout_margin="@dimen/density_10"
                   android:id="@+id/submitBtnId"
                   >

               </androidx.appcompat.widget.AppCompatButton>
           </LinearLayout>
       </androidx.cardview.widget.CardView>
   </ScrollView>

</FrameLayout>
</layout>