<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/density_5"
        android:layout_marginRight="@dimen/density_5"
        android:layout_marginTop="@dimen/density_5"
        android:layout_marginBottom="@dimen/density_5"
        app:cardCornerRadius="@dimen/density_5"
        app:cardElevation="@dimen/density_4"
        >
        <EditText
            android:id="@+id/addcommentId"
            android:padding="@dimen/density_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:background="@null"
            />
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/density_5"
        android:layout_gravity="center"
        android:id="@+id/showRatingLayoutId"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/density_5"
            android:layout_marginTop="@dimen/density_5"
            android:layout_marginEnd="@dimen/density_5"
            android:layout_marginBottom="@dimen/density_5"
            android:layout_gravity="center_vertical"
            android:text="@string/rating"
            android:textAllCaps="false"
            android:textColor="@color/black"
             />

        <RatingBar
            android:id="@+id/ratingIdAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:clickable="true"
            android:focusable="true"
            android:numStars="5"
            android:scaleX="0.6"
            android:rating="3"
            android:scaleY="0.6"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/density_5"
        android:layout_gravity="center"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtnId"
            android:layout_width="@dimen/density_110"
            android:layout_height="@dimen/density_30"
            android:text="@string/cancel"
            android:background="@drawable/round_shape"
            android:textAllCaps="false"
            android:textColor="@color/white" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="@dimen/density_110"
            android:layout_height="@dimen/density_30"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:id="@+id/okBtnId"
            android:background="@drawable/round_shape"
            android:layout_marginStart="@dimen/density_40"
            />
    </LinearLayout>
</LinearLayout>