<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SignInFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:contentDescription="@string/image_content_des"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/density_250"
                    android:src="@drawable/logo"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/density_10"
                    app:cardElevation="@dimen/density_4"
                    android:layout_margin="@dimen/density_20"
                    android:layout_gravity="center"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="10dp"
                        >

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/emailsignInId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/email_icon"
                            android:drawablePadding="@dimen/density_10"
                            android:hint="@string/email_text"
                            android:textAllCaps="false"
                            android:textColor="@color/black" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/passwordSignInId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/density_12"
                            android:drawableStart="@drawable/lock_icon"
                            android:drawablePadding="@dimen/density_10"
                            android:hint="@string/password_text"
                            android:inputType="textPassword"
                            android:textAllCaps="false"
                            android:textColor="@color/black" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/signInBtnId"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/density_40"
                            android:layout_marginTop="@dimen/density_20"
                            android:layout_marginBottom="@dimen/density_5"
                            android:background="@drawable/round_shape"
                            android:text="@string/sign_in"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>