<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="usr"
            type="com.example.touristpark.repository.model.User"/>
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/density_10"
            android:layout_marginRight="@dimen/density_10"
            android:layout_marginBottom="@dimen/density_10"
            android:layout_marginTop="@dimen/density_10"
            app:cardCornerRadius="@dimen/density_8"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:contentDescription="@string/image_content_des"
                    android:layout_marginTop="@dimen/density_10"
                    android:layout_width="@dimen/density_200"
                    android:layout_height="@dimen/density_130"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:id="@+id/profilepicId7"
                    android:src="@drawable/profile"
                    android:adjustViewBounds="true"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/density_110"
                    android:layout_height="@dimen/density_30"
                    android:text="@string/update_image"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/density_10"
                    android:background="@color/mainColor"
                    android:textColor="@color/white"
                    android:id="@+id/chooseImageId7"
                    />
                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="12"
                    android:layout_marginTop="@dimen/density_10"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="9"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            android:text="@string/name_text"
                            android:paddingBottom="@dimen/density_10"
                            android:paddingTop="@dimen/density_10"
                            android:textColor="@color/black"
                            android:layout_marginTop="@dimen/density_10"
                            android:layout_marginBottom="@dimen/density_10"
                            android:layout_marginStart="@dimen/density_10"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            android:text="@string/email_text"
                            android:paddingBottom="@dimen/density_10"
                            android:paddingTop="@dimen/density_10"
                            android:layout_marginTop="@dimen/density_10"
                            android:layout_marginBottom="@dimen/density_10"
                            android:layout_marginStart="@dimen/density_10"
                            android:textColor="@color/black"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            android:text="@string/phone_text"
                            android:paddingBottom="@dimen/density_10"
                            android:paddingTop="@dimen/density_10"
                            android:layout_marginTop="@dimen/density_10"
                            android:layout_marginBottom="@dimen/density_10"
                            android:layout_marginStart="@dimen/density_10"
                            android:textColor="@color/black"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAllCaps="false"
                            android:text="@string/password_text"
                            android:paddingBottom="@dimen/density_10"
                            android:paddingTop="@dimen/density_10"
                            android:layout_marginTop="@dimen/density_10"
                            android:layout_marginBottom="@dimen/density_10"
                            android:layout_marginStart="@dimen/density_10"
                            android:textColor="@color/black"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="3"
                        >
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/density_10"
                            android:layout_margin="@dimen/density_10"
                            android:textColor="@color/black"
                            android:inputType="text"
                            android:id="@+id/nameId7"
                            android:text="@={usr.name}"
                            />
                        <EditText
                            android:background="@null"
                            android:alpha="0.5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/density_10"
                            android:layout_margin="@dimen/density_10"
                            android:textColor="@color/black"
                            android:singleLine="false"
                            android:id="@+id/emailId7"
                            android:text="@={usr.email}"
                            android:cursorVisible="false"
                            android:focusableInTouchMode="false"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/density_10"
                            android:layout_margin="@dimen/density_10"
                            android:textColor="@color/black"
                            android:id="@+id/phoneId7"
                            android:text="@={usr.phone}"
                            android:inputType="phone"
                            />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:padding="@dimen/density_10"
                            android:layout_margin="@dimen/density_10"
                            android:textColor="@color/black"
                            android:id="@+id/passwordId7"
                            android:text="@={usr.password}"
                            />
                    </LinearLayout>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/density_40"
                    android:text="@string/update_button"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:background="@drawable/round_shape"
                    android:layout_marginTop="@dimen/density_20"
                    android:layout_margin="@dimen/density_10"
                    android:id="@+id/updateBtnId7"
                    >

                </androidx.appcompat.widget.AppCompatButton>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>
</layout>